--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
                 <a href="#" class="link">Сделать расчет и заказ</a>
             </div>
             <div class="main__images">
-                <img src="/img/7-IMG_2191-1-3-scaled-e1605728110550 1.png">
-                <img src="/img/urbanisland-53 1.png">
+                <img src="img/7-IMG_2191-1-3-scaled-e1605728110550 1.png">
+                <img src="img/urbanisland-53 1.png">
             </div>
         </main>
         <section class="products">
             <h2 class="title-h2">Наши изделия</h2>
             <div class="grid">
                 <div class="grid__cover">
-                    <img src="/img/01.png" alt="">
+                    <img src="img/01.png" alt="">
                 </div>
                 <div class="grid__cover">
-                    <img src="/img/02.png" alt="">
+                    <img src="img/02.png" alt="">
                 </div>
                 <div class="grid__cover">
-                    <img src="/img/03.png" alt="">
+                    <img src="img/03.png" alt="">
                 </div>
                 <div class="grid__cover">
-                    <img src="/img/04.png" alt="">
+                    <img src="img/04.png" alt="">
                 </div>
             </div>
         </section>
